Fix FF horizontal scrolling by tooltip #251

--- a/app/styles/angular-tooltips.scss
+++ b/app/styles/angular-tooltips.scss
@@ -1,116 +1,253 @@
-._720kb-tooltip {
-  background: #111;
-  color:white;
-  position:absolute;
-  z-index:9;
-  padding:0.4% 1%;
-  opacity:0;
-  visibility:hidden;
-  -webkit-border-radius:3px;
-  -moz-border-radius:3px;
-  border-radius:3px;
-  left:-200%;
-  top: 0;
-  pointer-events:none;
+$tolerance: 3px;
+$margin-tooltip-arrow: 6px;
+$padding-top-bottom-tooltip: 4px;
+$padding-rigth-left-tooltip: 8px;
+$tooltip-background-color: rgba(0, 0, 0, .85);
+$tooltip-color: #fff;
+$tooltip-border-radius: 3px;
+$tooltip-fast-transition: .15s;
+$tooltip-slow-transition: .65s;
+$tooltip-medium-transition: .35s;
+
+@mixin opacity-transition($speed) {
+  animation: animate-tooltip $speed;
 }
-._720kb-tooltip-title{
-  color:rgba(255,255,255,0.95);
-  font-weight: 500;
-  width: 100%;
-  clear:both;
+@mixin border-radius($radius) {
+  border-radius: $radius;
 }
-._720kb-tooltip._720kb-tooltip-medium {
-  padding:4.5px 10px;
-  font-size: 1em;
+
+@mixin keyframes($name) {
+  @-webkit-keyframes #{$name} {
+    @content;
+  }
+  @-moz-keyframes #{$name} {
+    @content;
+  }
+  @-ms-keyframes #{$name} {
+    @content;
+  }
+  @keyframes #{$name} {
+    @content;
+  }
 }
-._720kb-tooltip._720kb-tooltip-open {
-  visiblity:'';
+
+._exradicated-tooltip {
+  position: absolute;
+  display: block;
   opacity: 1;
+  z-index: 999;
 }
-._720kb-tooltip-caret:before {
-  content:'';
-  position: absolute;
-  width: 0;
-  height: 0;
-  border: 6px solid rgba(0, 0, 0, 0.8);
-}
-._720kb-tooltip-caret:after {
-  content:'';
-  position: absolute;
-  width: 0;
-  height: 0;
-  border: 5px solid transparent;
-}
-._720kb-tooltip-left ._720kb-tooltip-caret:before {
-  top: 50%;
-  left: 100%;
-  margin-left:0;
-  margin-top: -6px;
-  border-top-color: transparent;
-  border-bottom-color: transparent;
-  border-right-width: 0;
-}
-._720kb-tooltip-left ._720kb-tooltip-caret:after {
-  top: 50%;
-  left: 100%;
-  margin-left:0;
-  margin-top: -5px;
-  border-top-color: transparent;
-  border-bottom-color: transparent;
-  border-right-width: 0;
-}
-._720kb-tooltip-right ._720kb-tooltip-caret:before {
-  top: 50%;
-  left:0;
-  margin-left:-6px;
-  margin-top: -6px;
-  border-top-color: transparent;
-  border-bottom-color: transparent;
-  border-left-width: 0;
-}
-._720kb-tooltip-right ._720kb-tooltip-caret:after {
-  top: 50%;
-  left:0;
-  margin-left:-5px;
-  margin-top: -5px;
-  border-top-color: transparent;
-  border-bottom-color: transparent;
-  border-left-width: 0;
-}
-._720kb-tooltip-top ._720kb-tooltip-caret:before {
-  top: 100%;
-  left: 50%;
-  margin-left: -6px;
-  margin-bottom:-6px;
-  border-right-color: transparent;
-  border-left-color: transparent;
-  border-bottom-width: 0;
-}
-._720kb-tooltip-top ._720kb-tooltip-caret:after {
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  margin-bottom:-5px;
-  border-right-color: transparent;
-  border-left-color: transparent;
-  border-bottom-width: 0;
-}
-._720kb-tooltip-bottom ._720kb-tooltip-caret:before {
-  bottom: 100%;
-  left: 50%;
-  margin-left: -6px;
-  border-right-color: transparent;
-  border-left-color: transparent;
-  border-top-width: 0;
-}
-._720kb-tooltip-bottom ._720kb-tooltip-caret:after {
-  bottom: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-right-color: transparent;
-  border-left-color: transparent;
-  border-top-width: 0;
-}
-._720kb-tooltip-close-button {
-  float: right;
+
+tooltip {
+
+  @include keyframes(animate-tooltip) {
+    0% {
+
+      opacity: 0;
+    }
+
+    50% {
+
+      opacity: .5;
+    }
+
+    60% {
+
+      opacity: .8;
+    }
+
+    70% {
+
+      opacity: .9;
+    }
+
+    90% {
+
+      opacity: 1;
+    }
+  }
+
+  display: inline-block;
+  position: relative;
+
+  &._multiline {
+
+    display: block;
+  }
+
+  &._slow {
+
+    &._ready {
+
+      tip {
+        @include opacity-transition($tooltip-slow-transition);
+      }
+    }
+  }
+
+  &._fast {
+
+    &._ready {
+
+      tip {
+        @include opacity-transition($tooltip-fast-transition);
+      }
+    }
+  }
+
+  &._steady {
+
+    &._ready {
+
+      tip {
+        @include opacity-transition($tooltip-medium-transition);
+      }
+    }
+  }
+
+  tip {
+    @include border-radius($tooltip-border-radius);
+    background: $tooltip-background-color;
+    color: $tooltip-color;
+    display: none;
+    line-height: normal;
+    max-width: 500px;
+    min-width: 100px;
+    opacity: 0;
+    padding: $padding-top-bottom-tooltip $padding-rigth-left-tooltip;
+    position: absolute;
+    text-align: center;
+    width: auto;
+    will-change: top, left, bottom, right;
+
+    &._hidden {
+
+      display: block;
+      visibility: hidden;
+    }
+  }
+
+  &.active {
+
+    tip {
+      display: block;
+      opacity: 1;
+      z-index: 999;
+    }
+  }
+
+  tip-tip {
+
+    font-size: .95em;
+
+    &._large {
+
+      font-size: 1.1em;
+    }
+
+    &._small {
+
+      font-size: .8em;
+    }
+
+    #close-button {
+      cursor: pointer;
+      float: right;
+      left: 8%;
+      margin-top: -7%;
+      position: relative;
+    }
+  }
+
+  &._top {
+
+    tip {
+
+      left: 50%;
+      top: -($margin-tooltip-arrow + $tolerance);
+      transform: translateX(-50%) translateY(-100%);
+
+      tip-arrow {
+        border-left: 6px solid transparent;
+        border-right: 6px solid transparent;
+        border-top: 6px solid $tooltip-background-color;
+        content: '';
+        height: 0;
+        left: 50%;
+        margin-left: -$margin-tooltip-arrow;
+        position: absolute;
+        top: 100%;
+        width: 0;
+      }
+    }
+  }
+
+  &._bottom {
+
+    tip {
+
+      right: 50%;
+      top: 100%;
+      transform: translateY($margin-tooltip-arrow + $tolerance) translateX(50%);
+
+      tip-arrow {
+        border-bottom: 6px solid $tooltip-background-color;
+        border-left: 6px solid transparent;
+        border-right: 6px solid transparent;
+        bottom: 100%;
+        content: '';
+        height: 0;
+        left: 50%;
+        margin-left: -$margin-tooltip-arrow;
+        position: absolute;
+        width: 0;
+      }
+    }
+  }
+
+  &._right {
+
+    tip {
+
+      left: 100%;
+      top: 50%;
+      transform: translateX($margin-tooltip-arrow + $tolerance) translateY(-50%);
+
+      tip-arrow {
+        border-bottom: 6px solid transparent;
+        border-right: 6px solid $tooltip-background-color;
+        border-top: 6px solid transparent;
+        content: '';
+        height: 0;
+        margin-top: -$margin-tooltip-arrow;
+        position: absolute;
+        right: 100%;
+        top: 50%;
+        width: 0;
+      }
+    }
+  }
+
+  &._left {
+
+    tip {
+
+      left: -($margin-tooltip-arrow + $tolerance);
+      top: 50%;
+      transform: translateX(-100%) translateY(-50%);
+
+      tip-arrow {
+        border-bottom: 6px solid transparent;
+        border-left: 6px solid $tooltip-background-color;
+        border-top: 6px solid transparent;
+        content: '';
+        height: 0;
+        left: 100%;
+        margin-top: -$margin-tooltip-arrow;
+        position: absolute;
+        top: 50%;
+        width: 0;
+      }
+    }
+  }
 }
