--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -118,6 +118,7 @@ html.full-page {
 
     body {
         height: 100%;
+        overflow-x: hidden;
     }
     .page-view {
         min-height: 100%;
